<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="http://schemas.android.com/apk/res/android">
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="action_settings" translatable="false">My Profile</string>
    <string name="action_logout" translatable="false">Logout</string>
    <string name="action_make_premium" translatable="false">Make Premium</string>
    <string name="action_sold" translatable="false">Mark as Sold</string>
    <string name="action_stock_edit" translatable="false">Edit</string>
    <string name="action_remove" translatable="false">Remove</string>
    <string name="username_hint" translatable="false">Email</string>
    <string name="password_hint" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="invalid_email_id" translatable="false">Your Email id</string>
    <string name="invalid_password" translatable="false">Password Required</string>
    <string name="initializing_app" translatable="false">Initializing app…</string>
    <string name="view_stock" translatable="false">View Stock</string>
    <string name="add_stock" translatable="false">Add Stock</string>
    <string name="usedcar" translatable="false">Used Car Valuation</string>
    <string name="add_to_stock" translatable="false">Add to Stock</string>
    <string name="manage_leads" translatable="false">Manage Leads</string>
    <string name="buyer_leads" translatable="false">Buyer Leads</string>
    <string name="add_lead" translatable="false">Add Lead</string>
    <string name="dealer_platform" translatable="false">Dealer Platform</string>
    <string name="chat_logs" translatable="false">Chat Logs</string>
    <string name="lead_source" translatable="false">Source*</string>
    <string name="no_internet_msg">This feature required internet connection. Please check your internet setting and try again.</string>
    <string name="offline_message">Buyer is currently offline. Your message will be notified to them &amp; you will get reply when buyer is online.</string>
    <string name="lead_email_address" translatable="false">Customer Email</string>
    <string name="lead_contact_number" translatable="false">Customer Mobile No.</string>
    <string name="lead_name" translatable="false">Customer Name</string>
    <string name="warm" translatable="false">Warm</string>
    <string name="hot" translatable="false">Hot</string>
    <string name="cold" translatable="false">Cold</string>
    <string name="closed" translatable="false">Closed</string>
    <string name="lead_status" translatable="false">Status</string>
    <string name="select_follow_up_time" translatable="false">Time</string>
    <string name="select_follow_up_date" translatable="false">Date</string>
    <string name="lead_follow_up_date" translatable="false">Follow up date</string>
    <string name="source_quickr" translatable="false">Quikr</string>
    <string name="source_olx" translatable="false">OLX</string>
    <string name="source_walkin" translatable="false">Walk-in</string>
    <string name="source_cardekho" translatable="false">CarDekho</string>
    <string name="source_gaadi" translatable="false">Gaadi</string>
    <string name="source_website" translatable="false">Website</string>
    <string name="source_cartrade" translatable="false">Cartrade</string>
    <string name="source_carwale" translatable="false">Carwale</string>
    <string name="enter_lead_name" translatable="false">Lead name</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="error_lead_mobile_number" translatable="false">Lead mobile number is required</string>
    <string name="error_lead_email_address" translatable="false">Lead email address</string>
    <string name="error_provide_lead_source" translatable="false">Lead source is required</string>
    <string name="Available_warranty" translatable="false">Available Warranty</string>
    <string name="done_label">Done</string>
    <string name="searchlead">Search By</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="year_picker_description">Year list</string>
    <string name="select_day">Select month and day</string>
    <string name="select_year">Select year</string>
    <string name="item_is_selected">%1$s selected</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="day_of_week_label_typeface" translatable="false">sans-serif</string>
    <string name="time_placeholder" translatable="false">--</string>
    <string name="time_separator" translatable="false">:</string>
    <string name="ivr_range">IDV Range </string>
    <string name="zero_check_string">Zero Depreciation Cover</string>
    <string name="consumables">Consumables</string>
    <string name="engine_protection">Engine Protection</string>
    <string name="deductible_string">Voluntary Deductible </string>
    <string name="deleted_key"><xliff:g example="4" id="key">%1$s</xliff:g> deleted</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="radial_numbers_typeface" translatable="false">sans-serif</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string name="make" translatable="false">Make</string>
    <string name="model" translatable="false">Model</string>
    <string name="regplace" translatable="false">Reg Place</string>
    <string name="dealerNum" translatable="false">Dealer Number</string>
    <string name="dealerPrice" translatable="false">Dealr Price</string>
    <string name="regnum" translatable="false">Reg Num</string>
    <string name="price" translatable="false">Price</string>
    <string name="version" translatable="false">Version*</string>
    <string name="next" translatable="false">Next</string>
    <string name="view_lead" traslatable="false">View Lead</string>
    <string name="ad_stock_submit" translatable="false" traslatable="false">Add Stock</string>
    <string name="search_by_name_number" translatable="false">Enter Name or Number</string>
    <string name="emptyString"></string>
    <string name="network_error" translatable="false">No Internet connection</string>
    <string name="checkConnection" translatable="false">Please check your internet connection</string>
    <string name="leads">Leads</string>
    <string name="makeModelVersion">Model*</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="select_dealer">Select Dealer</string>
    <string name="change_dealer">Change Dealer</string>
    <string name="maruti" translatable="false">Maruti</string>
    <string name="hyundai" translatable="false">Hyundai</string>
    <string name="honda" translatable="false">Honda</string>
    <string name="toyota" translatable="false">Toyota</string>
    <string name="tata" translatable="false">Tata</string>
    <string name="mahindra" translatable="false">Mahindra</string>
    <string name="ford" translatable="false">Ford</string>
    <string name="chevrolet" translatable="false">Chevrolet</string>
    <string name="audi" translatable="false">Audi</string>
    <string name="volkswagen" translatable="false">Volkswagen</string>
    <string name="bmw" translatable="false">BMW</string>
    <string name="renault" translatable="false">Renault</string>
    <string name="mercedes" translatable="false">Mercedes</string>
    <string name="nissan" translatable="false">Nissan</string>
    <string name="skoda" translatable="false">Skoda</string>
    <string name="lamborghini" translatable="false">Lamborghini</string>
    <string name="bugatti" translatable="false">Bugatti</string>
    <string name="polaris" translatable="false">Polaris</string>
    <string name="ferrari" translatable="false">Ferrari</string>
    <string name="aston_martin" translatable="false">Aston Martin</string>
    <string name="mini" translatable="false">MINI</string>
    <string name="willy" translatable="false">Willy</string>
    <string name="lexus" translatable="false">Lexus</string>
    <string name="ashok_leyland" translatable="false">Ashok Leyland</string>
    <string name="mazda" translatable="false">Mazda</string>
    <string name="morris" translatable="false">Morris</string>
    <string name="studebaker" translatable="false">Studebaker</string>
    <string name="chrysler" translatable="false">Chrysler</string>
    <string name="hindustan_motors" translatable="false">Hindustan Motors</string>
    <string name="opel" translatable="false">Opel</string>
    <string name="reva" translatable="false">Reva</string>
    <string name="mahindra_renault" translatable="false">Mahindra Renault</string>
    <string name="maybach" translatable="false">Maybach</string>
    <string name="san_motors" translatable="false">San Motors</string>
    <string name="daewoo" translatable="false">Daewoo</string>
    <string name="ssangyong" translatable="false">SSangYong</string>
    <string name="isuzu" translatable="false">Isuzu</string>
    <string name="maserati" translatable="false">Maserati</string>
    <string name="force" translatable="false">Force</string>
    <string name="mitsubishi" translatable="false">Mitsubishi</string>
    <string name="premier" translatable="false">Premier</string>
    <string name="porsche" translatable="false">Porsche</string>
    <string name="icml" translatable="false">ICML</string>
    <string name="rolls_royce" translatable="false">Rolls Royce</string>
    <string name="volvo" translatable="false">Volvo</string>
    <string name="land_rover" translatable="false">Land Rover</string>
    <string name="bentley" translatable="false">Bentley</string>
    <string name="retry" translatable="false">Refresh</string>
    <string name="server_error" translatable="false">Oops! Some Problem With Our Servers.</string>
    <string name="no_internet_connection" translatable="false">No Internet Connection</string>
    <string name="title_activity_stocksactivity" translatable="false">View Stock</string>
    <string name="sort_by_price_asc" translatable="false">Price - Low To High</string>
    <string name="sendEmail" translatable="false">Email</string>
    <string name="sendSMS" translatable="false">SMS</string>
    <string name="makeCall" translatable="false">Call</string>
    <string name="label_condition_report" translatable="false">Condition Report</string>
    <string name="label_overall_condition" translatable="false">Overall condition</string>
    <string name="hint_condition">Select condition</string>
    <string name="hint_exterior_condition">Exterior</string>
    <string name="hint_body_frame">Body &amp; Frame</string>
    <string name="hint_engine_transmission">Engine/Transmission/Clutch</string>
    <string name="hint_suspension">Suspension/Steering</string>
    <string name="hint_electronics">Electronics/Electricals</string>
    <string name="hint_tyres">Tyres</string>
    <string name="hint_brakes">Brakes</string>
    <string name="hint_battery">Battery</string>
    <string name="hint_acheater">AC/Heater</string>
    <string name="hint_interior">Interior</string>
    <string name="no" translatable="false">No</string>
    <string name="change_host_url">Change Host URL</string>
    <string name="issue_rsa_help_text">Give Your Customer Free Cardekho Road-Side Assistance(RSA)</string>
    <string name="rsa_validity_period">Validity of this product is 6 months.</string>
    <string name="issue_free_rsa">Issue RSA</string>
    <string name="scheduleWalkIn">Schedule\nWalk In</string>
    <string name="markClosed">Mark Closed</string>
    <string name="reScheduleFollowUp">Re Schedule\nFollow Up</string>
    <string name="source_zigwheels">Zigwheels</string>
    <string name="notification">Notification</string>
</resources>