<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/ic_menu_notification"
        android:orderInCategory="100"
        android:title="@string/notification"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/changeDealer"
        android:orderInCategory="200"
        android:title="@string/change_dealer"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="300"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>